# sysprog

./: DockAllcups.dockerfile  README.md  leaderboard.md  output.json  settings.json  test.sh
1/: .gitignore  CMakeLists.txt  Makefile  a.out  checker_checker.sh  coro_jmp.h  corobus.c  corobus.cpp  corobus.h  example_jmp.c  example_swap.c  generator_generator.sh  libcoro.c  libcoro.cpp  libcoro.h  libcoro_test.c  libcoro_test.cpp  old.c  solution.c  sum.txt  task.txt  task_eng.txt  task_rus.txt  test.c  test.cpp  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
2/: CMakeLists.txt  Makefile  checker.py  parser.c  parser.cpp  parser.h  parser_test.c  parser_test.cpp  result15.txt  result20.txt  result25.txt  solution.cpp  task.txt  task_eng.txt  task_rus.txt  test_parser.py  tests.txt
3/: CMakeLists.txt  Makefile  task3.txt  task_eng.txt  task_rus.txt  test.c  test.cpp  userfs.c  userfs.cpp  userfs.h
4/: CMakeLists.txt  Makefile  task.txt  task_eng.txt  task_rus.txt  test.c  test.cpp  thread_pool.c  thread_pool.cpp  thread_pool.h
5/: CMakeLists.txt  Makefile  chat.c  chat.cpp  chat.h  chat_client.c  chat_client.cpp  chat_client.h  chat_client_exe.c  chat_client_exe.cpp  chat_server.c  chat_server.cpp  chat_server.h  chat_server_exe.c  chat_server_exe.cpp  task_eng.txt  task_rus.txt  test.c  test.cpp
advanced/boost_chat/: Makefile  chat.cpp  chat.h  chat_client.cpp  chat_client.h  chat_client_exe.cpp  chat_server.cpp  chat_server.h  chat_server_exe.cpp  task_eng.txt  test.cpp
allcups/: DockAllcups.dockerfile  test.sh
bonus/: task_eng.txt
exam/: questions_eng.txt  rules_eng.txt
examples/cpp20_coroutines/: Makefile  README.md  iocoro.cpp  iocoro.h  main.cpp
examples/reuse_port_addr/: README.md
lecture_examples/2_processes/: 10_pipe.c  11_advanced_pipe.c  12_exec.c  2_proc_memory.c
lecture_examples/6_threads/: 13_simple_condvar_1.c  13_simple_condvar_2.c
lecture_examples/7_ipc/: 11_shm.c  15_sock_client.c  15_sock_server.c  1_simple_sort.c  2_parallel_sort.c  3_mem_sort.c
lecture_examples/8_net/: 2_getaddrinfo.c  3_client.c  3_server.c
lecture_examples/9_aio/: 4_client.c  4_server_select.c  5_server_poll.c  6_server_kqueue.c  7_server_epoll.c
utils/: rlist.h  unit.c  unit.cpp  unit.h  unitpp.h
utils/heap_help/: README.md  heap_help.c  heap_help.cpp  heap_help.h
